# atomosphere

./: .env.example  .gitignore  BRD.md  CLAUDE.md  Makefile  README.md  TDD.md  docker-compose.yml  pyproject.toml
.claude/agents/: dashboard.md  data-pipeline.md  docs.md  infra.md  ml-sentiment.md  reviewer.md
docker/clickhouse/: Dockerfile
docker/seaweedfs/: Dockerfile  entrypoint.sh  s3.json.tmpl
docs/: BRD.md  ROADMAP.md  TDD.md  TRD.md  mart-sizing-analysis.md
explore/: jetstream_raw_sample.py  jetstream_test.py
grafana/: Dockerfile
grafana/dashboards/: atmosphere.json
infra/init/: Dockerfile  setup.py
logs/: heimdall-wal.jsonl  metrics.db
reference/: clickhouse-26.1-bootstrap-research.md  clickhouse-migration-plan.md  iceberg-maintenance-procedures.md  iceberg-streaming-writes.md  jetstream-api.md  jetstream-dockerfile  jetstream-go.mod  jetstream-main.go  jetstream-raw-sample.jsonl  sentiment-model-research.md  spark-python-datasource-v2.md  trino-migration-plan.md
scripts/: maintain.sh  monitor.sh  replay.sh  reset-checkpoint.sh  smoke-test.sh
scripts/heimdall/: __init__.py  __main__.py  alerter.py  cli.py  config.py  docker.py  engine.py  format.py  registry.py  result.py  runner.py  spark_progress.py  store.py  stress_test.py  tui.py
spark/: Dockerfile  Dockerfile.sentiment  unified.py
spark/analysis/: maintenance.py  sizing.py
spark/conf/: spark-defaults-query.conf  spark-defaults.conf
spark/ingestion/: ingest_raw.py
spark/serving/: clickhouse_views.py  query_api.py
spark/sources/: jetstream_source.py
(+92 files in other folders)
